# DTU_CatLearn

./: pyproject.toml
catlearn/active_learning/: acquisition_functions.py  algorithm.py
catlearn/api/: ase_data_setup.py  catmap.py  networkx_graph_api.py
catlearn/cross_validation/: hierarchy_cv.py  k_fold_cv.py
catlearn/estimator/: general_gp.py  general_kernel.py  general_preprocess.py
catlearn/featurize/: adsorbate_prep.py  asap_wrapper.py  base.py  neighbor_matrix.py  periodic_table_data.py  setup.py  site_stability.py  slab_utilities.py
catlearn/fingerprint/: adsorbate.py  bulk.py  catapp.py  chalcogenide.py  convoluted.py  graph.py  particle.py  prototype.py  standard.py  voro.py
catlearn/ga/: algorithm.py  convergence.py  mating.py  mutate.py  natural_selection.py
catlearn/learning_curve/: data_process.py  feature_selection.py  learning_curve.py  placeholder.py  pltfile.py
catlearn/optimize/: acquisition.py  constraints.py  functions_calc.py  interpolation_ts.py  io.py  mlgo.py  mlmin.py  mlneb.py  tools.py
catlearn/preprocess/: feature_elimination.py  feature_engineering.py  greedy_elimination.py  importance_testing.py
catlearn/regression/: cost_function.py  (+3 more)
setup/: git-clean.py  pre-commit
test/: common.py  test_1_feature_generation.py  test_acquisition.py  test_ads_fp_gen.py  test_api.py  test_chalcogenides.py  test_feature_base.py  test_feature_optimization.py  test_io.py  test_learning_curve.py  test_lml_optimizer.py  test_mlneb.py  test_mlneb_old.py  test_neighborlist.py  test_scale.py  test_validation.py
tutorials/: test_notebooks.py
(+73 files in other folders)
